--- a/public/html/product.html
+++ b/public/html/product.html
@@ -1,39 +1,43 @@
 <!DOCTYPE html>
 <html lang="ko" ng-app="product">
 <head>
-   <meta charset="UTF-8">
-   <title>포인트 상점</title>
-   <script src="../components/angular/angular.js"></script>
-   <script src="../js/controllers/product.js"></script>
-   <script src="../js/controllers/productList.js"></script>
-   <script src="../js/filters/customFilter.js"></script>
-   
-   <link href="../components/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
-   <link href="../components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet"/>
+    <meta charset="UTF-8">
+    <title>포인트 상점</title>
+    <script src="../components/angular/angular.js"></script>
+    <script src="../js/controllers/product.js"></script>
+    <script src="../js/controllers/productList.js"></script>
+    <script src="../js/filters/customFilter.js"></script>
+    <link href="../components/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
+    <link href="../components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet"/>
 </head>
 <body ng-controller="productCtrl">
-   <div class="navbar navbar-inverser">
-      <a class="navbar-brand" href="#">포인트 상점</a>
-   </div>
-   <div class="panel panel-default row" ng-controller = "productListCtrl">
-      <div class="col-xs-3">
-      	 <a ng-click="selectCategory()" class="btn btn-block btn-default btn-lg">Home</a>
-          <a ng-repeat="item in data.products | orderBy : 'category' | unique:'category'" 
-          	ng-click = "selectCategory(item)"
-            class="btn btn-block btn-default btn-lg">{{item}}</a>
-
-	</div>
-      <div class="col-xs-8">
-         <div class="well" ng-repeat="item in data.products | filter : categoryFilterFn ">
+<div class="navbar navbar-inverse">
+    <a class="navbar-brand" href="#">포인트 상점</a>
+</div>
+<div class="panel panel-default row" ng-controller="productListCtrl">
+    <div class="col-xs-3">
+        <a ng-click="selectCategory()" class="btn btn-block btn-default btn-lg">Home</a>
+        <a ng-repeat="item in data.products | orderBy: 'category' | unique:'category'"
+           ng-click="selectCategory(item)"
+           class="btn btn-block btn-default btn-lg"
+           ng-class="getCategoryClass(item)">{{item}}</a>
+    </div>
+    <div class="col-xs-8">
+        <div class="well" ng-repeat="item in data.products | filter:categoryFilterFn | range:selectedPage:pageSize">
             <h3>
-               <strong>{{item.name}}</strong>
-               <span class="pull-right label label-primary">
-                  {{item.price | number:0}}원
-               </span>
-               <span class="lead">{{item.description}}</span>
+                <strong>{{item.name}}</strong>
+                <span class="pull-right label label-primary">{{item.price | number:0}} 원</span>
             </h3>
-         </div>
-      </div>
-   </div>
+            <span class="lead">{{item.description}}</span>
+        </div>
+        <div class="pull-right btn-group">
+            <a ng-repeat = "page in data.products | filter:categoryFilterFn | pageCount : pageSize"
+               ng-click="selectPage($index+1)" class="btn btn-default"
+               ng-class="getPageClass($index+1)">
+                {{$index+1}}
+            </a>
+        </div>
+    </div>
+</div>
 </body>
 </html>
