--- a/public/html/hello.html
+++ b/public/html/hello.html
@@ -44,10 +44,19 @@
                 <td>{{product.count}}</td>
                 <td>{{product.price}}</td>
             </tr>
+            <tr>
+                <td>New</td>
+                <td><input type="text" class="form-control" ng-model="product.title"></td>
+                <td><input type="text" class="form-control" ng-model="product.count"></td>
+                <td><input type="text" class="form-control" ng-model="product.price"></td>
+            </tr>
+
             </tbody>
         </table>
         <p>
             <button class="btn btn-primary" ng-click="loadData()"> 데이터 불러오기 </button>
+            <button class="btn btn-success" ng-click="pushData(product)"> 데이터 추가하기 </button>
+            <button class="btn btn-danger" ng-click="pushData2(product)"> 데이터 추가하기2 </button>
         </p>
     </div>
 </div>
