--- a/public/html/product.html
+++ b/public/html/product.html
@@ -26,21 +26,32 @@
            class="btn btn-block btn-default btn-lg"
            ng-class="getCategoryClass(item)">{{item}}</a>
     </div>
-    <div class="col-xs-8">
+    <div class="col-xs-6">
         <div class="well" ng-repeat="item in data.products | filter:categoryFilterFn | range:selectedPage:pageSize">
             <h3>
                 <strong>{{item.name}}</strong>
                 <span class="pull-right label label-primary">{{item.price | number:0}} 원</span>
             </h3>
+            <span class="pull-right  btn btn-success" ng-click="addShoppingList(item)">담기</span>
             <span class="lead">{{item.description}}</span>
         </div>
         <div class="pull-right btn-group">
-            <a ng-repeat = "page in data.products | filter:categoryFilterFn | pageCount : pageSize"
+            <a ng-repeat="page in data.products | filter:categoryFilterFn | pageCount : pageSize"
                ng-click="selectPage($index+1)" class="btn btn-default"
                ng-class="getPageClass($index+1)">
                 {{$index+1}}
             </a>
         </div>
+    </div>
+
+    <div class="col-xs-13">
+        <div ng-repeat="item in shoppingList">
+            {{item.name}} : {{item.price | number:0}} 원
+        </div>
+        <button class="btn btn-sm btn-primary">총합 : {{getTotal()}}원</button>
+        <button class="btn btn-success">구매하기</button>
+
+
     </div>
 </div>
 </body>
