--- a/public/html/example.html
+++ b/public/html/example.html
@@ -28,7 +28,8 @@
 
     <products></products>
 
-    <div template-list template = 'table'></div>
+    <div template-list template = 'table' class="table table-striped"></div>
+    <div template-list template = 'table' class="table table-hover"></div>
 
 </body>
 </html>
