--- a/public/html/example.html
+++ b/public/html/example.html
@@ -4,32 +4,25 @@
     <meta charset="UTF-8">
     <title>Example</title>
     <script src="../components/angular/angular.js"></script>
+    <script src="../components/angular-route/angular-route.js"></script> <!--angular-route 추가 -->
     <script src="../js/example/controller.js"></script>
     <script src="../js/example/directive.js"></script>
     <link href="../components/bootstrap/dist/css/bootstrap.css" rel="stylesheet"/>
     <link href="../components/bootstrap/dist/css/bootstrap-theme.css" rel="stylesheet"/>
 </head>
 <body ng-app="example" ng-controller="ExampleController">
-    <button ng-click="clickUnfocused()">포커스가 없습니다.</button>
-    <button ng-init-focus ng-click="clickFocused()">포커스가 있습니다.</button>
-    <div>
-        {{message.text}}
+
+    <!-- route 선택 부분 -->
+    <div class="navbar">
+        <div class="navbar-inner">
+            <a class="brand" href="#">라우터 샘플</a>
+            <ul class="nav">
+                <li><a href="#home">홈</a></li>
+                <li><a href="#prev">이전스터디</a></li>
+                <li><a href="#products">상품 관리</a></li>
+            </ul>
+        </div>
     </div>
-
-    <hello-world></hello-world>
-    <movie username="쿵푸팬더3" reputation="GOOD!" img="http://www.kado.net/news/photo/201106/518714_175033_437.jpg"></movie>
-    <br>
-    <ul>
-        <li>Home</li>
-        <li>New</li>
-        <li restricted>Profile</li>
-        <li restricted>Team Activity</li>
-    </ul>
-
-    <products></products>
-
-    <div template-list template = 'table' class="table table-striped"></div>
-    <div template-list template = 'table' class="table table-hover"></div>
-
+    <ng-view></ng-view>
 </body>
 </html>
